<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webcam_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="developer@todo.todo">developer</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
