<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webcam_sub_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="developer@todo.todo">developer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv4</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
